finally resolved container not fully covering background problem.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+html, body { 
+    height: auto;
+    min-height: 100%;
+    width: 100%;
+}
+
 body {
 
     /* for absolute/fixed position children */
@@ -154,8 +160,7 @@ ul li a {
     z-index: 100;
     width: 100%;
     top: 0px; 
-    left: 0px;
-    height: 100%;
+    bottom: 0px;
     color: white;
 
     background: rgba(0,0,0,.5);
